<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.richdroid.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/my_nanodegree_apps"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_spotify_streamer"
            style="@style/ButtonStyle"
            android:onClick="openSpotify"
            android:text="@string/spotify_streamer" />

        <Button
            android:id="@+id/btn_scores_app"
            style="@style/ButtonStyle"
            android:onClick="openScores"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/btn_library_app"
            style="@style/ButtonStyle"
            android:onClick="openLibrary"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/btn_build_it_bigger"
            style="@style/ButtonStyle"
            android:onClick="openBigger"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/btn_bacon_reader"
            style="@style/ButtonStyle"
            android:onClick="openBaconReader"
            android:text="@string/bacon_reader" />

        <Button
            android:id="@+id/btn_capstone"
            style="@style/ButtonStyle"
            android:onClick="openCapstone"
            android:text="@string/capstone" />
    </LinearLayout>
</LinearLayout>
